fix: overflow hidden

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,7 +5,7 @@ html {
 body {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: linear-gradient(white, #e0d1d1);
   box-shadow: inset 0 5vh 30vh 5vh #d6c2c2;
   font-family: "Share Tech Mono", monospace;
